name:                sendai-subway-api
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/rinx/sendai-subway-api#readme
license:             BSD3
license-file:        LICENSE
author:              Rintaro Okamura
maintainer:          rintaro.okamura@gmail.com
copyright:           2017 Rintaro Okamura
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Subway
                     , Subway.Types
  build-depends:       base >= 4.7 && < 5
                     , text
                     , time
                     , mtl
                     , scalpel
                     , MissingH
                     , Spock-core
                     , postgresql-simple
                     , aeson
  default-language:    Haskell2010

executable sendai-subway-api
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       sendai-subway-api
                     , base
                     , Spock >= 0.11
                     , Spock-core
                     , mtl
                     , text
                     , http-types
                     , aeson
                     , postgresql-simple
  default-language:    Haskell2010

test-suite sendai-subway-api-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rinx/sendai-subway-api
